Fix jumbotron title vertical alignment on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,7 @@ hr {
 .title {
   text-align: center;
   padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 .title h1,
